src/styles.scss
// Custom Theming for Angular Material
// For more information: https://material.angular.io/guide/theming
@use "@angular/material" as mat;
@use "@dhutaryan/ngx-mat-timepicker" as mat-timepicker;
/* You can add global styles to this file, and also import other style files */
@use "scss/main.scss" as core; // Reverted to include .scss extension

// Forward prismjs styles
@forward "prismjs/themes/prism-okaidia.css";
@forward "prismjs/plugins/line-numbers/prism-line-numbers.css";
@forward "prismjs/plugins/line-highlight/prism-line-highlight.css";
/**
 * This injects Tailwind's base styles and any base styles registered by
 * plugins.
 */

@tailwind base;

// @import "tailwindcss/base";

/**
  * This injects Tailwind's component classes and any component classes
  * registered by plugins.
  */
// @import "tailwindcss/components";
@tailwind components;

/**
  * This injects Tailwind's utility classes and any utility classes registered
  * by plugins.
  */
@tailwind utilities;
/**
  * Use this directive to control where Tailwind injects the hover, focus,
  * responsive, dark mode, and other variants of each class.
  *
  * If omitted, Tailwind will append these classes to the very end of
  * your stylesheet by default.
  */
@tailwind variants;

// if you want to support color attribute in M3 add compatibility mixin
@include mat.color-variants-backwards-compatibility(core.$my-theme);

// Comment out the line below if you want to use the pre-defined typography utility classes.
// For more information: https://material.angular.io/guide/typography#using-typography-styles-in-your-application.
// @include mat.typography-hierarchy($deepscrape-theme);
// Comment out the line below if you want to use the deprecated `color` inputs.
// @include mat.color-variants-backwards-compatibility($deepscrape-theme);

// console.log() CSS Debugger
/* * {
    box-sizing: border-box;
    background-color: rgb(0 100 0 / 0.1) !important;
} */

html.dark {
    @include mat-timepicker.timepicker-theme(core.$my-theme-dark);
    @include mat.all-component-colors(core.$my-theme-dark);
}

// Include theme styles for core and each component used in your app.
// Alternatively, you can import and @include the theme mixins for each component
// that you are using.
:root {
    // timepicker uses these component
    // @include mat.mat-mdc-form-field(core.$my-theme);
    // @include mat.input-theme(core.$my-theme);
    // @include mat.button(core.$my-theme);
    // @include mat.fab-theme(core.$my-theme);
    // @include mat.icon-button-theme(core.$my-theme);
    // @include mat.divider-theme(core.$my-theme);
    // timepicker theme
    @include mat-timepicker.timepicker-theme(core.$my-theme);
    @include mat.all-component-themes(core.$my-theme);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    @apply font-display font-normal;
}

ol,
ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

img,
svg,
video,
canvas,
audio,
iframe,
embed,
object {
    display: block;
    vertical-align: middle;
}

img,
video {
    max-width: 100%;
    height: auto;
}

svg {
    width: 100%;
    fill: currentColor;
    & {
        height: 100%;
    }
}
*,
::before,
::after {
    border-width: 0;
    border-style: solid;
    border-color: theme("borderColor.DEFAULT", currentColor);
}

.google-map * {
    border-style: none;
}

html {
    display: block;
    font-size: 13px;
    height: 100%;

    @media (min-width: 1024px) {
        font-size: 16px;
    }
}

@layer utilities {
    body {
        margin: 0;
        font-family: "Roboto", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
        min-height: 100vh;
        background-attachment: fixed;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
        @include core.scrollbar;
        @apply bg-gray-100 dark:bg-gray-900;
    }
}
// add the code bellow
@layer utilities {
    /* Hide scrollbar for Chrome, Safari and Opera */
    .no-scrollbar::-webkit-scrollbar {
        display: none;
    }
    /* Hide scrollbar for IE, Edge and Firefox */
    .no-scrollbar {
        -ms-overflow-style: none; /* IE and Edge */
        scrollbar-width: none; /* Firefox */
    }

    /* Code prism js and tailwind prose typography */
    .prose :where(code):not(:where([class~="not-prose"], code[class*="language-"], [class~="not-prose"] *)) {
        @apply text-purple-600 dark:text-purple-400;
    }

    .prose :where(strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
        @apply text-gray6 dark:text-white;
    }

    // .prose :where(h1, h2, h3, h4, h5, h6, th):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
    //     @apply no-underline;
    // }
}

input:-webkit-autofill,
input:-webkit-autofill:focus {
    transition:
        background-color 0s 600000s,
        color 0s 600000s !important;
}

/* @font-face {
    font-family: "icomoon";
    src:
        url("/assets/webfonts/mat-solid-900.ttf") format("truetype"),
        url("/assets/webfonts/mat-solid-900.woff2") format("woff2");
    font-weight: normal;
    font-style: normal;
}

.custom-font {
    font-family: "icomoon";
    font-size: 24px;
    font-style: normal;
    font-weight: normal;
    line-height: 1;
}
 */

